--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,6 +11,7 @@
 					<p>{{ site.owner.bio }}</p>
 				</li>
 				<li><a href="{{ site.url }}/about/">Learn More</a></li>
+				<li><a href="{{ site.url }}/cv/">Read CV</a></li>
 				{% if site.owner.email %}<li>
 					<a href="mailto:{{ site.owner.email }}"><i class="fa fa-envelope"></i> Email</a>
 				</li>{% endif %}
